# PxlShrink---Image-Processor-Huffman-Compressor

./: CMakeLists.txt  DecompressDialog.cpp  DecompressDialog.h  HuffmanCompressor.cpp  HuffmanCompressor.h  Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  Matrix.h  Pixel.h  README.md  dec.huf  generate_test_ppm.cpp  main.cpp  run.bat  test_matrix.cpp  viva_preparation_guide.md.resolved
